# prompt-ops-hub

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  env.example  pyproject.toml  requirements.txt  test_diff_coverage.py
.github/workflows/: ci.yml  ci.yml.backup
config/: context.md  integrity_rules.yml  phase.json  rules.md
demo-repo2/: .gitignore  README.md  pyproject.toml
demo-repo3/: README.md  pyproject.toml
demo-repo3/config/: guardrails.conf
frontend/: Dockerfile  package.json
frontend/app/: api.ts  globals.css  layout.tsx  page.tsx
integrity_core/: __init__.py  config.py  coverage.py  diff_coverage.py  observer.py  policy.py  setup.py  tamper.py  trivial_tests.py
integrity_core/tests/: __init__.py  test_coverage.py  test_diff_coverage.py
policy/: rules.rego
scripts/: check_thresholds.py  ci_self_check.py  delta_ratio_check.py  dep_scan.py  dev_up.sh  diff_coverage_check.py  guardrails_check.py  no_skip_check.py  print_ci_summary.py  run_mutation_tests.py  run_semgrep.py  seed_demo.py  tag_release.sh  test.bat  test.sh  test_tamper_check.py  trivial_test_check.py
semgrep/rules/: perf.yml  secrets.yml  security.yml
src/: __init__.py  cli.py  main.py
src/agent/: __init__.py  (+2 more)
templates/: task_prompt.jinja
tests/: __init__.py  test_adapters.py  test_agent_worker.py  test_api.py  test_approval_api.py  test_ci_self_check.py  test_cli.py  test_cli_basic.py  test_cli_comprehensive.py  test_cli_init.py  test_cli_snippet.py  test_config.py  test_core_coverage.py  test_diff_coverage.py  test_diff_coverage_script.py  test_e2e_approval.py  test_guardrails.py  test_llm_hooks.py  test_main.py  test_main_comprehensive.py  test_observer.py  test_patch_builder.py  test_policy.py  test_prompt_builder.py  test_regen.py  test_scripts.py  test_spec_expander.py  test_trivial_test_check.py
(+34 files in other folders)
